--- a/Innovant/css/style.css
+++ b/Innovant/css/style.css
@@ -422,8 +422,13 @@ a {
   line-height: 0;
 }
 @media screen and (max-width: 840px) {
+  .header__logo {
+    max-width: 160px;
+  }
+}
+@media screen and (max-width: 840px) {
   .header__logo img {
-    width: 70%;
+    width: 80%;
     margin-top: 5px;
   }
 }
@@ -458,42 +463,6 @@ a {
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
 }
-.header__hamburger {
-  position: relative;
-  font-size: 0.71428571em;
-  width: 1.5em;
-  height: 1em;
-  display: none;
-  padding: 0.4em 0;
-  margin-left: 2.66666667em;
-  background-color: currentColor;
-  background-clip: content-box;
-  text-align: initial;
-}
-@media screen and (max-width: 840px) {
-  .header__hamburger {
-    display: inline-block;
-  }
-}
-@media screen and (max-width: 1100px) {
-  .header__hamburger {
-    margin-left: 0.9375em;
-  }
-}
-.header__hamburger:before,
-.header__hamburger:after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 0.2em;
-  background-color: currentColor;
-}
-.header__hamburger:before {
-  top: 0;
-}
-.header__hamburger:after {
-  top: 0.8em;
-}
 .header__actions {
   float: right;
   color: #fff;
@@ -514,6 +483,42 @@ a {
 .header__actions .header__search:hover {
   opacity: 0.6;
 }
+.header__hamburger {
+  display: none;
+  width: 21px;
+  height: 20px;
+  position: relative;
+  top: 3px;
+  border-bottom: 3px solid #fff;
+  margin-left: 2.66666667em;
+}
+@media screen and (max-width: 840px) {
+  .header__hamburger {
+    display: inline-block;
+  }
+}
+@media screen and (max-width: 840px) {
+  .header__hamburger {
+    display: inline-block;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .header__hamburger {
+    margin-left: 0.8125em;
+  }
+}
+.header__hamburger:before,
+.header__hamburger:after {
+  position: relative;
+  content: '';
+  display: block;
+  width: 21px;
+  height: 3px;
+  background-color: currentColor;
+}
+.header__hamburger:before {
+  top: 10px;
+}
 .header__content {
   width: 90%;
   position: absolute;
@@ -522,7 +527,7 @@ a {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 781px) and (max-width: 960px) {
   .header__content {
     font-size: 14px;
   }
@@ -785,33 +790,41 @@ a {
 .works__card_item {
   position: relative;
   float: left;
-  width: calc(33.3% - 30px*2/3);
-  margin-top: 30px;
-  margin-right: 30px;
 }
-.works__card_item:nth-child(3n) {
-  margin-right: 0;
-  float: right;
+@media screen and (min-width: 1281px) {
+  .works__card_item {
+    width: calc(33.3% - 30px * 2 / 3);
+    margin-top: 30px;
+    margin-right: 30px;
+  }
+  .works__card_item:nth-child(3n) {
+    margin-right: 0;
+    float: right;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .works__card_item {
+    margin-top: 15px;
+  }
 }
 @media screen and (min-width: 961px) and (max-width: 1280px) {
   .works__card_item {
     width: calc(33.3% - 30px * 2 / 3 / 2);
-    margin-top: 15px;
     margin-right: 15px;
+  }
+  .works__card_item:nth-child(3n) {
+    margin-right: 0;
+    float: right;
   }
 }
 @media screen and (min-width: 651px) and (max-width: 960px) {
   .works__card_item {
     width: calc(50% - 30px / 4);
-    margin-top: 15px;
+    margin-right: 15px;
   }
   .works__card_item:nth-child(even) {
     margin-right: 0;
     float: right;
-  }
-  .works__card_item:nth-child(odd) {
-    margin-right: 15px;
-    float: left;
   }
 }
 @media screen and (max-width: 650px) {
@@ -820,12 +833,6 @@ a {
     float: none;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15px;
-  }
-  .works__card_item:nth-child(3n) {
-    margin-left: auto;
-    margin-right: auto;
-    float: none;
   }
 }
 .works_card__img {
@@ -1096,7 +1103,12 @@ a {
 }
 @media screen and (max-width: 920px) {
   .fback__slider {
-    margin-bottom: 6.25em;
+    margin-bottom: 5.625em;
+  }
+}
+@media screen and (max-width: 720px) {
+  .fback__slider {
+    margin-bottom: 7.5em;
   }
 }
 @media screen and (max-width: 600px) {
@@ -1160,8 +1172,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .people__img li {
-    width: 5.3125em;
-    height: 5.3125em;
+    width: 5em;
+    height: 5em;
   }
 }
 .people__img li:last-child {
@@ -1256,9 +1268,6 @@ a {
   font-weight: 600;
 }
 /* PRICE ====================================== */
-.price {
-  display: none;
-}
 .price__caption {
   margin-top: 6.6875em;
   margin-bottom: 1em;
@@ -1299,6 +1308,8 @@ a {
 .price__card {
   position: relative;
   width: 33%;
+  min-width: 253px;
+  max-width: 350px;
   float: left;
   border: 1px solid #e2e2e2;
   box-sizing: border-box;
@@ -1306,20 +1317,35 @@ a {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
 }
+@media screen and (max-width: 865px) {
+  .price__card {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2.5em;
+  }
+  .price__card:last-child {
+    margin-bottom: 0;
+  }
+}
 .price__card:first-child .price-card__item-desc:last-child {
   border-bottom: none;
 }
 .price__card:hover {
   box-shadow: 0 10px 30px rgba(161, 161, 161, 0.1);
+  border-top: 10px solid #63def6;
 }
-.price-card__topline {
-  position: absolute;
-  width: 100%;
-  height: 10px;
-  top: 0;
-  left: 0;
-  display: none;
+.price__card:hover .price-card__button {
+  color: #fff;
   background-color: #63def6;
+}
+.price__card:hover .price-card__caption {
+  margin-top: 1.5em;
+}
+@media screen and (max-width: 865px) {
+  .price__card:hover .price-card__caption {
+    margin-top: 0.95em;
+  }
 }
 .price-card__caption {
   display: inline-block;
@@ -1327,6 +1353,12 @@ a {
   margin-bottom: 0.5em;
   font-size: 1.25em;
   color: #585858;
+}
+@media screen and (max-width: 865px) {
+  .price-card__caption {
+    margin-top: 1.5em;
+    margin-bottom: 0.4em;
+  }
 }
 .price-card__stick {
   display: block;
@@ -1342,14 +1374,30 @@ a {
   border-bottom: 1px solid #e2e2e2;
   color: #aaaaaa;
 }
+@media screen and (max-width: 865px) {
+  .price-card__cost {
+    margin-top: 0.625em;
+    padding-bottom: 1.1875em;
+  }
+}
 .price-card__cost span {
   color: #63def6;
 }
 .price-card__list {
   padding-top: 0.8125em;
 }
+@media screen and (max-width: 865px) {
+  .price-card__list {
+    padding-top: 0.4375em;
+  }
+}
 .price-card__item:last-child .price-card__item-desc {
   margin-bottom: 2.3125em;
+}
+@media screen and (max-width: 865px) {
+  .price-card__item:last-child .price-card__item-desc {
+    margin-bottom: 1.1875em;
+  }
 }
 .price-card__item:last-child .price-card__item-desc:after {
   display: none;
@@ -1362,10 +1410,8 @@ a {
   text-transform: uppercase;
   color: #585858;
 }
-.price-card__item-caption:before {
-  font-family: 'fontello';
+.price-card__item-caption i {
   color: #7bbb55;
-  content: '\e816';
   padding-right: 0.625em;
 }
 .price-card__item-desc {
@@ -1388,6 +1434,11 @@ a {
   margin-right: auto;
   background-color: #e2e2e2;
 }
+@media screen and (max-width: 865px) {
+  .price-card__item-desc:after {
+    margin-top: 1.1875em;
+  }
+}
 .price-card__button-container {
   border-top: 1px solid #e2e2e2;
 }
@@ -1404,10 +1455,6 @@ a {
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
   color: #63def6;
-}
-.price-card__button:hover {
-  color: #fff;
-  background-color: #63def6;
 }
 /* BLOG ======================================= */
 .blog__caption {
@@ -1810,4 +1857,3 @@ a {
 }
 /* ============================================ */
 /* ============================================ */
-/* MEDIA QUERRY =============================== */
