--- a/Innovant/css/style.less
+++ b/Innovant/css/style.less
@@ -1411,6 +1411,27 @@
 			color: #676767;
 			opacity: 0.6;
 		}
-/* ============================================ */
+/* TO TOP ===================================== */
+	.totop {
+	  position: fixed;
+		right: 20px;
+		bottom: 20px;
+		display: none;
+	  width: 50px;
+	  height: 50px;
+	  background-color: #fff;
+	  opacity: 0.6;
+	  border-radius: 50%;
+	}
+	.totop__arrow {
+	  position: absolute;
+	  top: 38%;
+	  left: 35%;
+	  width: 13px;
+	  height: 13px;
+	  border-left: 4px solid @header;
+	  border-top: 4px solid @header;
+	  transform: rotate(45deg);
+	}
 /* ============================================ */
 
