--- a/Innovant/css/style.less
+++ b/Innovant/css/style.less
@@ -259,7 +259,20 @@
 		.poppins400;
 		font-size: 16px;
 		line-height: 1.75;
-		@media screen and (max-width: 1100px) { font-size: 14px; }
+		@media screen and (max-width: 1024px) {
+			font-size: 14px;
+			background: none;
+		}
+
+		background-image: url(../img/header/background.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+	}
+	section, footer {
+		background-color: #fff;
 	}
 	ul {
 		margin: 0;
@@ -277,24 +290,14 @@
 		.header {
 			position: relative;
 			min-height: 100vh;
-			background-image: url(../img/header/background.jpg);
-	    background-attachment: fixed;
-	    background-position: center;
-	    background-repeat: no-repeat;
-	    background-size: cover;
+			@media screen and (max-width: 1024px) {
+				background-image: url(../img/header/background.jpg);
+		    background-attachment: fixed;
+		    background-position: center;
+		    background-repeat: no-repeat;
+		    background-size: cover;
+			}
 			color: #fff;
-		}
-		// fix backgournd-attachment jigga-drigga in IE
-		@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-		  html {
-		    overflow: hidden;
-		    height: 100%;    
-		  }
-		  body {
-		    overflow: auto;
-		    height: 100%;
-				overflow-x: hidden;
-		  }
 		}
 		.header__container {
 			width: 97%;
@@ -409,7 +412,7 @@
 	// content
 		.header__content {
 			width: 90%;
-			.absolute_center;
+			.absolute_middle;
 			text-align: center;
 			@media screen and (min-width: 781px) and (max-width: 960px) { font-size: 14px; }
 			@media screen and (max-width: 780px) { font-size: 12px; }
@@ -563,8 +566,11 @@
 /* PORTFOLIO ================================== */
 	// Размер блока hover-effect зависит от font-size .works_card__action
 	// caption
+		.works {
+			padding-top: 107/16em;
+			@media screen and (max-width: 480px) { padding-top: 60/16em; }
+		}
 		.works__caption {
-			margin-top: 107/16em;
 			margin-bottom: 16/16em;
 			h2 {
 				font-size: 30/16em;
@@ -577,6 +583,7 @@
 			width: 90%;
 			max-width: 820/16em;
 			margin-bottom: 75/16em;
+			@media screen and (max-width: 480px) { margin-bottom: 38/16em }
 			.center;
 			text-align: center;
 			.poppins300;
@@ -741,6 +748,9 @@
 		}
 /* SERVICES =================================== */
 	// caption
+		.serv {
+			.works;
+		}
 		.serv__caption {
 			.works__caption;
 		}
@@ -772,6 +782,7 @@
 			}
 			&:last-child {
 				margin-bottom: 120/16em;
+				@media screen and (max-width: 480px) { margin-bottom: 60/16em; }
 			}
 		}
 		.serv-card__icon {
@@ -973,6 +984,11 @@
 		}
 /* PRICE ====================================== */
 	// caption
+		.price {
+			.works;
+			padding-bottom: 120/16em;
+			@media screen and (max-width: 480px) { padding-bottom: 60/16em; }
+		}
 		.price__caption {
 			.works__caption;
 		}
@@ -1146,7 +1162,7 @@
 				}
 			}
 			@media screen and (max-width: 1080px) {
-				&:nth-child(odd) { margin-right: @gutter * 2 / 3 / 2; margin-left: 0;}
+				&:nth-child(odd)   { margin-right: @gutter * 2 / 3 / 2; margin-left: 0;}
 				&:nth-child(even)  { margin-left: @gutter * 2 / 3 / 2; margin-right: 0;}
 			}
 			@media screen and (max-width: 650px) {
@@ -1231,6 +1247,16 @@
 		}
 /* CONTACT ==================================== */
 	// caption
+		.contact {
+			padding-bottom: 120/16em;
+			padding-top: 107/16em;
+			@media screen and (max-width: 480px) {
+				padding-top: 60/16em;
+				padding-bottom: 60/16em;
+
+			}
+
+		}
 		.contact__caption {
 			.works__caption;
 		}
@@ -1244,7 +1270,6 @@
 			width: 90%;
 			.center;
 			max-width: 450/16em;
-			margin-bottom: 120/16em;
 		}
 		.contact__input {
 			position: relative;
@@ -1366,10 +1391,6 @@
 					border-bottom: 1px solid #ebebeb;
 					background-color: transparent;
 				}
-				// &:-webkit-autofill {
-			 //    -webkit-box-shadow: 0 0 0px 1000px #261d2e inset; // background (not transparent)
-			 //    -webkit-text-fill-color: @price-text !important; // text-color
-				// }
 				.autofill_bg(#261d2e);
 				.autofill_color(@price-text);
 			}
@@ -1406,10 +1427,13 @@
 		}
 	// copy
 		.copyright {
-			margin: 11/16em 0;
+			padding: 11/16em 0;
+			background-color: #fff;
 			text-align: center;
 			color: #676767;
-			opacity: 0.6;
+			span {
+				opacity: 0.6;
+			}
 		}
 /* TO TOP ===================================== */
 	.totop {
@@ -1419,7 +1443,7 @@
 		display: none;
 	  width: 50px;
 	  height: 50px;
-	  background-color: #fff;
+	  background-color: #eee;
 	  opacity: 0.6;
 	  border-radius: 50%;
 	}
